--- a/Bookstore.Service/rhetos-app.local.settings.json
+++ b/Bookstore.Service/rhetos-app.local.settings.json
@@ -1,1 +1,1 @@
-{ "Rhetos": { "AppSecurity": { "AllClaimsForAnonymous": true } } }
+{ "Rhetos": { "AppSecurity": { "AllClaimsForUsers": "OS\\ihalusek@IHALUSEK-LAP" } } }
