--- a/Bookstore.Service/Bookstore.Service.csproj
+++ b/Bookstore.Service/Bookstore.Service.csproj
@@ -18,9 +18,9 @@
     <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
     <IISExpressSSLPort />
-    <IISExpressAnonymousAuthentication />
-    <IISExpressWindowsAuthentication />
-    <IISExpressUseClassicPipelineMode />
+    <IISExpressAnonymousAuthentication>disabled</IISExpressAnonymousAuthentication>
+    <IISExpressWindowsAuthentication>enabled</IISExpressWindowsAuthentication>
+    <IISExpressUseClassicPipelineMode>false</IISExpressUseClassicPipelineMode>
     <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -88,7 +88,7 @@
     <Content Include="rhetos-build.settings.json" />
     <Content Include="DslScripts\Books.rhe" />
     <Content Include="DslScripts\Employees.rhe" />
-    <Content Include="DslScripts\RowPermission.rhe" />
+    <Content Include="DslScripts\Shipment.rhe" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
